# oop7

./: CMakeLists.txt  README.md  main.cpp
include/: druid.h  factory.h  game.h  npc.h  squirrel.h  visitor.h  werewolf.h
src/: druid.cpp  factory.cpp  game.cpp  npc.cpp  squirrel.cpp  visitor.cpp  werewolf.cpp
tests/: test.cpp
